--- a/marine-insight/public/data/csvConvertToGeoJSON.ipynb
+++ b/marine-insight/public/data/csvConvertToGeoJSON.ipynb
@@ -38,13 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e6562410",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read CSV\n",
-    "df = pd.read_csv(\"predicted_clusters.csv\")\n",
+    "# Read File\n",
+    "fileName = \"placentia_chemistry_clusters\" # File Name placentia_chemistry_clusters\n",
+    "saveLocation = \"./GEO/\" + fileName + \".geojson\" # Save Location\n",
+    "df = pd.read_csv(\"./CSV/\" + fileName + \".csv\") # Read CSV\n",
     "\n",
     "features = []\n",
     "for _, row in df.iterrows():\n",
@@ -55,7 +57,7 @@
     "geojson_obj = FeatureCollection(features)\n",
     "\n",
     "# Save To File\n",
-    "with open(\"clusters.geojson\", \"w\") as f:\n",
+    "with open(saveLocation, \"w\") as f:\n",
     "    geojson.dump(geojson_obj, f)"
    ]
   }
